[package]
name = "chobs"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Chobs (Changes Observer) is a tool that automatically restarting your process when file changes in the selected directory. It may be you system process or your project execution. For example if you don't want to call `cargo run` on every code changes, you can use Chobs."
exclude=[".DS_Store"]
repository = "https://github.com/arg2u/chobs"
documentation="https://docs.rs/chobs"
keywords = ["dirwalker", "hot restart", "auto re-run","chobs"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name="chobs"
chobs="src/lib.rs"
doctest = true
doc = true
crate-type = ["lib"]

[dependencies]
structopt="0.3.26"
serde={version="1.0.147", features = ["derive"]}
serde_json="1.0.89"
anscape="0.2.2"